# customer_service_data_analyst_agent

./: .env.example  .gitignore  PLAN.md  README.md  agent.py  data_loader.py  langgraph.json  llm_config.py  main.py  mcp_server.py  memory.py  pyproject.toml  query_recommender_plan.md  recommender.py  recommender_summary.html  streamlit_app.py  streamlit_ui_plan.md  task1_instructions.md  task1_summary.html  task2_plan.md  task2_summary.html  task3_mcp_instructions.md  task3_summary.html  tools.py
