[project]
name = "customer-service-data-analyst-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.5",
    "fastmcp>=2.12.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.1",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.1",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "langgraph-prebuilt>=1.0.0",
    "langgraph-api>=0.8.7",
    "langgraph-cli>=0.4.26",
    "numpy>=2.4.6",
    "pandas>=2.2.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "torch>=2.12.0",
]
